--- a/NewsPortal/NewsPaper/templates/news_search.html
+++ b/NewsPortal/NewsPaper/templates/news_search.html
@@ -3,30 +3,37 @@
 {% load custom_tags %}
 
 {% block title %}
-NewsList
+NewsSearch
 {% endblock title %}
 
 {% block content %}
-   <h1>Все новости</h1>
+   <h1>Искать новости</h1>
 
-   <h3>{% current_time '%b %d %Y' %}</h3>
+   <form action="" method="get">
+       {# Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями #}
+       {{ filterset.form.as_p }}
+       {# Добавим кнопку отправки данных формы #}
+       <input type="submit" value="Найти" />
+   </form>
 
    <hr>
-   {% if news_list %}
+   {% if news_search %}
        <table>
            <tr>
                <td>Категория</td>
                <td>Заголовок</td>
                <td>Дата публикации</td>
                <td>Новость</td>
+               <td>Автор</td>
            </tr>
 
-           {% for news in news_list %}
+           {% for news in news_search %}
            <tr>
                <td>{{ news.category.name }}</td>
                <td>{{ news.name|slice:":20"|censor }}</td>
                <td>{{ news.pub_date|date:"d.m.Y" }}</td>
                <td>{{ news.description|slice:":20"|censor }}</td>
+               <td>{{ news.author.name }}</td>
            </tr>
            {% endfor %}
 
