--- a/NewsPortal/NewsPaper/templates/flatpages/default.html
+++ b/NewsPortal/NewsPaper/templates/flatpages/default.html
@@ -13,7 +13,7 @@
         <!-- Responsive navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
    <div class="container">
-       <a class="navbar-brand" href="#">Новостной портал</a>
+       <a class="navbar-brand" href="http://127.0.0.1:8000/">Новостной портал</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse"
                data-target="#navbarResponsive"
                aria-controls="navbarResponsive" aria-expanded="false"
