--- a/NewsPortal/NewsPaper/templates/news_detail.html
+++ b/NewsPortal/NewsPaper/templates/news_detail.html
@@ -10,4 +10,15 @@ NewsDetail
 <h2>{{ news_detail.name|censor }}</h2>
 <p>{{ news_detail.description|censor }}</p>
 <p>Автор и дата публикации: {{ news_detail.author }}, {{ news_detail.pub_date|date:"d.m.Y" }}</p>
+
+{% if user.is_authenticated %}
+    {% if category in user.subscribed_categories.all %}
+        <button class="btn btn-primary" disabled>Вы подписаны на {{ news_detail.category.name }}</button>
+    {% else %}
+        <form action="{% url 'subscribe_category' category.id %}" method="post">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-primary">Подписаться на {{ news_detail.category.name }}</button>
+        </form>
+    {% endif %}
+{% endif %}
 {% endblock content %}
