--- a/NewsPortal/NewsPaper/templates/account/email/email_confirmation_signup_message.html
+++ b/NewsPortal/NewsPaper/templates/account/email/email_confirmation_signup_message.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     {% load account %} <!-- Загружаем тег, который позволит получить нам ссылку на подтверждение -->
-    <h1>Thank you for registering {{ user.username }}!</h1>
-    <h3>Please follow <a href="{{ activate_url }}">the link</a> to activate your account</h3>
+    <h1>Спасибо за регистрацию {{ user.username }}!</h1>
+    <h3>Пожалуйста, перейдите <a href="{{ activate_url }}">по ссылке</a> для активации аккаунта</h3>
      <!-- Вставляем ссылку на активацию -->
 </body>
 </html>
